used semantic ion-note tag for block data fields; fixed spacing of merkle root field

--- a/app/src/app/app.scss
+++ b/app/src/app/app.scss
@@ -29,6 +29,14 @@ body {
     color: #999;
     font-size: 1.4rem;
   }
+
+  ion-note {
+    color: #999;
+    max-width: 50%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 .grid--table {
